name:                bassbull
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/TheGhostHuCodes/bassbull#readme
license:             BSD3
license-file:        LICENSE
author:              Yung-Jin (Joey) Hu
maintainer:          yungjinhu@gmail.com
copyright:           2018 Yung-Jin (Joey) Hu
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bassbull
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
